example/tests/ui/custom.stderr
error: missing field `example`

       = help: try ident: example=2.5
 --> tests/ui/custom.rs:3:10
  |
3 | #[derive(Custom)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Custom` (in Nightly builds, run with -Z macro-backtrace for more info)

error: conflict_a !!! conflict_b
  --> tests/ui/custom.rs:22:5
   |
22 | #[a(conflict_a = "hey")]
   |     ^^^^^^^^^^

error: conflict_b !!! conflict_a
  --> tests/ui/custom.rs:23:5
   |
23 | #[b(conflict_b = "hi")]
   |     ^^^^^^^^^^

error: expected one of `optional_implicit`, `optional_explicit`, `optional_default`, `default`, `conflict_a`, `conflict_b`, `example`, `flag`
  --> tests/ui/custom.rs:27:9
   |
27 | #[ident(hello)]
   |         ^^^^^

error: expected nothing
  --> tests/ui/custom.rs:29:9
   |
29 | #[empty(hello)]
   |         ^^^^^

error: expected field
  --> tests/ui/custom.rs:28:10
   |
28 | #[single(hello)]
   |          ^^^^^
